
# add here all files
data_DATA = konquest-splash.bmp planet1.xpm planet2.xpm planet3.xpm planet4.xpm \
	planet5.xpm planet6.xpm planet7.xpm planet8.xpm planet9.xpm ruler.xpm

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/konquest/pics

